app/src/main/java/com/example/anny/myapplication/JavaInterpreter.java
/* Generated By:JavaCC: Do not edit this line. JavaInterpreter.java */
// =================================
//        IMPORTS
// =================================

package com.example.anny.myapplication;

import java.lang.*;
import java.util.*;
import java.lang.reflect.*;
import java.io.*;
import android.util.Log;
import org.apache.commons.lang3.reflect.*;
/** New line translator. */
public class JavaInterpreter implements JavaInterpreterConstants {

  // =================================
  //        INNER CLASSES
  // =================================
  public static class Value{
    public Class<?> clazz;
    public Object value;
    public boolean isArray;
    public boolean isClass;

    public Value(Class<?> clazz, Object value){
      this.clazz = clazz;
      this.value = value;
      this.isArray = clazz.isArray();
      this.isClass = value == null;
    }

    public String toString(){
      return "class: " + clazz.toString() + ", value: " + (value != null ? value.toString() : "null");
    }
  }

  static class MethodClass{
    public String methodName;
    public List<Value> params;

    public MethodClass(String methodName, List<Value> params){
      this.methodName = methodName;
      this.params = params;
    }
  }

  static class Invoke{
    public String field;
    public MethodClass method;

    public Invoke(MethodClass m, String f){
      field = f;
      method = m;
    }
  }

  // =================================
  //        CLASS VARIABLES
  // =================================
  public static Map<String,Value> varibals = new HashMap<String,Value>();
  public static JavaInterpreter parser;
  public static String mypackage;
  public static List<String> packages;

  // =================================
  //              MAIN
  // =================================
  public static void initialize(Object thisObj, String packagename){
    Value thisVal = new Value(thisObj.getClass(), thisObj);
    mypackage = packagename;
    packages = Arrays.asList(
              mypackage + ".",
              "java.lang.",
              "java.util.",
              "android.widget.",
              "android.util.",
              "android.app.",
              "android.view.",
              "android.content."
      );
    varibals.put("this", thisVal);
    InputStream targetStream = new ByteArrayInputStream("".getBytes());
    parser = new JavaInterpreter(targetStream );
  }

  public static void parseFunc(String s) throws ParseException {

    InputStream targetStream = new ByteArrayInputStream(s.getBytes());
    parser.ReInit(targetStream);
    parser.Body();
  }

  // =================================
  //        HELPER FUNCTIONS
  // =================================
  public static boolean doesVarExist(String var_name){
    return varibals.containsKey(var_name);
  }

  public static Object getNewInstance(final Class<?> clazz, List<Value> constructorParameters) throws ParseException{
    Class<?> [] parameterTypes = new Class[constructorParameters.size()];
    Object [] parameters = new Object[constructorParameters.size()];
    for(int i =  0; i < constructorParameters.size(); i++) {
        parameterTypes[constructorParameters.size() - i - 1] = constructorParameters.get(i).clazz;
        parameters[constructorParameters.size() - i - 1] = constructorParameters.get(i).value;
    }
    try{
        //Constructor constructor = clazz.getConstructor(parameterTypes);
        //return constructor.newInstance(parameters);
        return ConstructorUtils.invokeConstructor(clazz, parameters);

    }
    catch(Exception e){
        throw new ParseException("failed to create instance: " + e.getCause());
    }
  }

  public static Value invokeStaticMethod(final Class<?> clazz, MethodClass m, Object o) throws ParseException{
    List<Value> methodParameters = m.params;
    Class<?> [] parameterTypes = new Class[methodParameters.size()];
    Object [] parameters = new Object[methodParameters.size()];
    for(int i =  0; i < methodParameters.size(); i++) {
        parameterTypes[methodParameters.size() - i - 1] = methodParameters.get(i).clazz;
        parameters[methodParameters.size() - i - 1] = methodParameters.get(i).value;
        System.out.println("debug param : " + parameters[methodParameters.size() - i - 1]);
        System.out.println("debug type : " + parameterTypes[methodParameters.size() - i - 1]);
    }
    try{
      Object res = null;
      if (o == null) {
          res = MethodUtils.invokeStaticMethod(clazz, m.methodName, parameters);
      }
      else {
          res = MethodUtils.invokeMethod(o, m.methodName, parameters);
      }
      if (res == null){
        return null;
      }
      return new Value(res.getClass(), res);
    }
    catch(Exception e){
        Log.d("fetch","var "  + o);
        Log.d("fetch","method "  + m.methodName);
        Log.d("fetch","params "  + parameters);
        for (Object p : parameters){
          Log.d("fetch","param " + p + p.getClass().getSimpleName());
        }
        Log.d("fetch",  clazz.getSimpleName());
        for(Method meth : clazz.getMethods()){
            if(meth.getName().equals(m.methodName)){
                throw new ParseException("failed to invoke method: "+m.methodName+" on "+clazz.getSimpleName()+" \u005cn Wrong parameters");
            }
        }
        throw new ParseException("failed to invoke method: " + m.methodName+" on "+clazz.getSimpleName()+" \u005cn No such method found");
    }
  }

  public static Class<?> checkClass(Token className) throws ParseException{
    Log.d("fetch","searching for class name "+className.image);
    for (String pkg : packages){
      Log.d("fetch", " checking pck "+pkg);
      Class<?> clazz = classExists(pkg + className.image);
      if (clazz != null ){
        Log.d("fetch"," found class in pckg :"+pkg + clazz.getSimpleName());
        return clazz;
      }
    }
    throw new ParseException("Encountered \"" + className.image + "\" at column " + className.beginColumn + ".\nsymbol doesnt exist");

  }

  static Class<?> classExists(String fullClassName) {
      try {
          return Class.forName(fullClassName);
      } catch (ClassNotFoundException e) {
          return null;
      }
  }

/** Top level production. */
  static final public void Body() throws ParseException {
    Statment();
    jj_consume_token(SC);
    if (jj_2_1(2)) {
      Body();
    } else {
      ;
    }
    jj_consume_token(0);
  }

  static final public String FieldInvoke() throws ParseException {
  Token name = null;
    name = jj_consume_token(NAME);
    {if (true) return name.image;}
    throw new Error("Missing return statement in function");
  }

  static final public List<Invoke> ListInvokes() throws ParseException {
  Token f = null;
  MethodClass m = null;
  List<Invoke> l = null;
    jj_consume_token(DOT);
    if (jj_2_2(2)) {
      m = MethodInvoke();
    } else if (jj_2_3(2)) {
      f = jj_consume_token(NAME);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_4(2)) {
      l = ListInvokes();
    } else {
      ;
    }
    if (l == null){
      l = new ArrayList<Invoke>();
    }
    if (m != null){
      l.add(0, new Invoke(m, null));
    }
    else {
      l.add(0, new Invoke(null, f.image));
    }
    {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  static final public MethodClass MethodInvoke() throws ParseException {
  List<Value> l = null;
  Token name = null;
    name = jj_consume_token(NAME);
    jj_consume_token(LPARAM);
    if (jj_2_5(2)) {
      l = ParamList();
    } else {
      ;
    }
    jj_consume_token(RPARAM);
    if (l == null){
      l = new ArrayList<Value>();
    }
    MethodClass m = new MethodClass(name.image, l);
    {if (true) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public List<Value> ParamList() throws ParseException {
  List<Value> l = null;
  Value v = null;
    v = Param();
    if (jj_2_6(2)) {
      jj_consume_token(COMMA);
      l = ParamList();
    } else {
      ;
    }
    if (l == null){
      l = new ArrayList<Value>();
    }
    l.add(v);
    {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  static final public Value Param() throws ParseException {
  Value v = null;
    v = Exp();
    {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public void Statment() throws ParseException {
  Value v = null;
  Token var_name = null;
  Token assign = null;
    if (jj_2_7(2)) {
      var_name = jj_consume_token(NAME);
      jj_consume_token(ASSIGN);
    } else {
      ;
    }
    v = Exp();
    if (var_name != null){
      varibals.put(var_name.image, v);
      //DEBUG
      System.out.println("all variables: " + varibals.toString());
    }
  }

  static final public Value Exp() throws ParseException {
  Value v = null;
  List<Invoke> l = null;
    v = SimpleExp();
    if (jj_2_8(2)) {
      l = ListInvokes();
    } else {
      ;
    }
    if (l != null){
      for (Invoke i : l){
        if (i.method != null){
          v = invokeStaticMethod(v.clazz, i.method, v.value);
        }
        else {
          try{
            Field f = v.clazz.getField(i.field);
            v = new Value(f.getType(), f.get(v.value));
          }
          catch (Exception e){
            Class<?>[] inners = v.clazz.getDeclaredClasses();
            boolean flag = false;
            for (Class<?> inner : inners){
              if (inner.getSimpleName().equals(i.field)){
                v = new Value(inner, null);
                flag = true;
                break;
              }
            }
            if (!flag){
                {
                  if (true)
                    throw new ParseException("no such symbol: " + i.field);
                }
            }
          }
        }
      }
    }
    {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public Value SimpleExp() throws ParseException {
  Token class_name = null;
  Token value = null;
  Value v = null;
  Class<?> clazz = null;
  List<Value> l = null;
  Token var_name = null;
  Token field = null;
  Token size_arr = null;
  MethodClass m = null;
  String f = null;
    if (jj_2_12(2)) {
      var_name = jj_consume_token(NAME);
    //case: variable or regular class


    try{
      Class<?> clazz1 = checkClass(var_name);
      v = new Value(clazz1, null);
    }
    catch(Exception e){
      if (doesVarExist(var_name.image)){
        v = varibals.get(var_name.image);
      }
      else {
        {if (true)
          throw new ParseException("Encountered \"" + var_name.image + "\" at column " + var_name.beginColumn + ".\nsymbol doesnt exist");
        }

      }
    }
    } else if (jj_2_13(2)) {
      jj_consume_token(NEW);
      class_name = jj_consume_token(NAME);
      if (jj_2_10(2)) {
        jj_consume_token(LPARAM);
        if (jj_2_9(2)) {
          l = ParamList();
        } else {
          ;
        }
        jj_consume_token(RPARAM);
      } else if (jj_2_11(2)) {
        jj_consume_token(LARRAY);
        size_arr = jj_consume_token(INT_NUM);
        jj_consume_token(RARRAY);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    //get class:
    //case: regular class
    clazz = checkClass(class_name);

    if (clazz != null){
      //case: array
      if (size_arr != null){
        try{
          int size = Integer.parseInt(size_arr.image);
          if (size <= 0){
            {if (true) throw new ParseException("invalid size");}
          }
          Object arr = Array.newInstance(clazz, size);
          v = new Value(arr.getClass(), arr);
        }
        catch(NumberFormatException e){
          {if (true) throw new ParseException("invalid size");}
        }
      }
      //case: constructor
      else{
        if (l == null){
          try{
            Object val = clazz.newInstance();
            v = new Value(clazz, val);
            {if (true) return v;}
          }
          catch(Exception e){
            {if (true) throw new ParseException("failed to call constructor with no parameters");}
          }
        }
        try{
          Object val = getNewInstance(clazz, l);
          v = new Value(clazz, val);
        }
        catch(Exception e){
          {if (true) throw new ParseException("failed to call constructor");}
        }
      }
    }
    } else if (jj_2_14(2)) {
      value = jj_consume_token(INT_NUM);
    v = new Value(int.class, Integer.valueOf(value.image));
    } else if (jj_2_15(2)) {
      value = jj_consume_token(DOUBLE_NUM);
    v = new Value(double.class, Double.valueOf(value.image));
    } else if (jj_2_16(2)) {
      value = jj_consume_token(STRING);
    v = new Value(String.class, value.image.substring(1,value.image.length()-1));
    } else if (jj_2_17(2)) {
      jj_consume_token(TRUE);
    v = new Value(boolean.class, Boolean.TRUE);
    } else if (jj_2_18(2)) {
      jj_consume_token(FALSE);
    v = new Value(boolean.class, Boolean.FALSE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_3_18() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3_17() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_scan_token(LPARAM)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_9()) jj_scanpos = xsp;
    if (jj_scan_token(RPARAM)) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3_13() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_scan_token(DOUBLE_NUM)) return true;
    return false;
  }

  static private boolean jj_3R_1() {
    if (jj_3R_5()) return true;
    if (jj_scan_token(SC)) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_scan_token(LARRAY)) return true;
    if (jj_scan_token(INT_NUM)) return true;
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_scan_token(INT_NUM)) return true;
    return false;
  }

  static private boolean jj_3R_2() {
    if (jj_scan_token(NAME)) return true;
    if (jj_scan_token(LPARAM)) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    if (jj_3R_6()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_6()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_3R_8()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_8()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_12() {
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) {
    jj_scanpos = xsp;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_2()) return true;
    return false;
  }

  static private boolean jj_3R_3() {
    if (jj_scan_token(DOT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) return true;
    }
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_1()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(NAME)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_7()) jj_scanpos = xsp;
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public JavaInterpreterTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[18];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;
